[project]
name = "blog-backend"
version = "2.1.0"
description = "Functional blog backend API with clean architecture, multi-tenancy, and Nuitka compilation support"
requires-python = ">=3.11"
keywords = ["fastapi", "blog", "functional-programming", "nuitka", "multi-tenant", "clean-architecture"]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-frontmatter>=1.0.1",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "markdown>=3.5.1",
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "requests>=2.32.4",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "nuitka>=1.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
